Notes/yamls/example-redis-config.yml
apiVersion: v1
kind: Pod
metadata:
    name: redis
spec:
    containers:
    - name: redis
      image: kubernetes/redis:v1
      volumeMounts:
      - mountPath: /redis-master
        name: config
    volumes:
    - name: config
      configMap: 
        name: example-redis-config
        items:
        - key: redis-config
          path: redis.conf
