Notes/yamls/fluentds.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
    name: fluentd-ds
spec:
    template:
        metadata:
            labels:
                name: fluentd
        spec:
            containers:
            - name: fluentd
              image: gcr.io/google-containers/fluentd-elasticsearch:1.20
    selector: 
      matchLabels:
        name: fluentd
