Notes/yamls/mysecret-env-pod.yml
apiVersion: v1
kind: Pod
metadata:
    name: secret-env-pod 
spec:
    containers:
    - name: mycontainer
      image: redis
    restartPolicy: Never
