Notes/yamls/mysecret-pod.yml
apiVersion: v1
kind: Pod
metadata:
    name: mypod
spec:
    containers:
    - name: mypod
      image: redis
      volumeMounts:
      - name: foo
        mountPath: "/etc/foo"
        readOnly: true
    volumes:
    - name: foo
      secret:
        secretName: mysecret
