Notes/yamls/nginx-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-deployment
    labels: 
        app: nginx-app
spec:
    replicas: 1
    selector:
        matchLabels:
            app: nginx-app
    template:
        metadata:
            labels:
                app: nginx-app
        spec:
            containers:
            - name: nginx-container
              image: nginx:1.7.9
              ports:
              - containerPort: 80
