Notes/yamls/redis-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    labels:
        app: guestbook
spec:
    replicas: 2
    selector:
        matchLabels:
            app: guestbook
            tier: frontend
    template:
        metadata:
            labels:
                app: guestbook
                tier: frontend
        spec:
            containers:
            - name: php-redis
              image: gcr.io/google-samples/gb-frontend:v4
              resources:
                requests:
                    cpu: 100m
                    memory: 100Mi
              ports:
              - containerPort: 80
