Notes/yamls/redis-slave.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis-slave
    labels:
        app: redis
spec:
    replicas: 3
    selector: 
        matchLabels:
            app: redis
            role: slave
            tier: backend
    template:
        metadata:
            labels: 
              app: redis
              role: slave
              tier: backend
        spec:
            containers:
            - name: slave
              image: gcr.io/google_samples/gb-redisslave:v1
              resources:
                requests:
                    cpu: 100m
                    memory: 100Mi
              ports:
              - containerPort: 6379
