Notes/yamls/redis-slave-svc.yml
apiVersion: v1
kind: Service
metadata:
    name: redis-slave-svc
    labels:
        app: redis
        role: slave
        tier: backend
spec:
    ports:
    - port: 6379
    type: ClusterIP
    selector:
        app: redis
        role: slave
        tier: backend
