Notes/yamls/redis-svc.yml
apiVersion: v1
kind: Service
metadata:
    name: frontend-svc
    labels:
        app: guestbook
        tier: frontend
spec:
    type: NodePort
    ports:
    - port: 80
    selector:
        app: guestbook
        tier: frontend
