Notes/yamls/example-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: example-ingress
spec:
    rules:
    - host: hello-world.info
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web
              port: 
                number: 8080
